syntax = "proto3";
package proto.config;

option go_package = "github.com/spinnaker/kleat/api/client/config";

import "storage/azs.proto";
import "storage/gcs.proto";
import "storage/oracle.proto";
import "storage/s3.proto";
import "storage/redis.proto";
import "google/protobuf/wrappers.proto";

// Configuration for the front50 microservice.
message Front50 {
  Spinnaker spinnaker = 1;
  StorageService storageService = 2 [json_name="storage-service"];

  message Spinnaker {
    storage.Gcs gcs = 1;
    storage.Azs azs = 2;
    storage.Oracle oracle = 3;
    storage.S3 s3 = 4;
    storage.Redis redis = 5;
    Delivery delivery = 6;
  }

  message Delivery {
    google.protobuf.BoolValue enabled = 1;
  }

  message StorageService {
    DeliveryConfig deliveryConfig = 1;
    message DeliveryConfig {
      int32 refreshMs = 1;
    }
  }
}
